# SonaFlow-Firmware

./: .clangd  .gitignore  CMakeLists.txt  README.md  partitions.csv
components/application/: CMakeLists.txt  application.cpp  application.hpp
components/application/states/: connected_idle_state.cpp  connected_idle_state.hpp  fatal_error_state.cpp  fatal_error_state.hpp  state_base.cpp  state_base.hpp  streaming_state.cpp  streaming_state.hpp  uninitialized_state.cpp  uninitialized_state.hpp  waiting_state.cpp  waiting_state.hpp
components/audio_sampler/: CMakeLists.txt  audio_sampler.cpp  audio_source.cpp
components/audio_sampler/include/: audio_sampler.hpp  audio_source.hpp
components/audio_source/: CMakeLists.txt  audio_source.cpp
components/ble_manager/: CMakeLists.txt  ble_manager.cpp  ble_manager.hpp  ble_packet.cpp  ble_protocol.cpp
components/ble_manager/include/: ble_manager.hpp  ble_packet.hpp
components/common_defs/: CMakeLists.txt
components/led_manager/: CMakeLists.txt  led_manager.cpp  led_manager.hpp
components/storage_manager/: CMakeLists.txt  storage_manager.cpp  storage_manager.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
